docs: add documentation about users
